--- a/projects/project4/CSS/poem2css.css
+++ b/projects/project4/CSS/poem2css.css
@@ -179,7 +179,7 @@ transform: scale(1, -1);
 
 	float:left;
 	left:40px;
-	top:170px;
+	top:370px;
 -ms-transform: rotate(270deg); /* IE 9 */
     -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
     transform: rotate(270deg);
@@ -195,14 +195,52 @@ transform: scale(1, -1);
 	float:left;
 	left:40px;
 	top:370px;
--moz-transform: scale(1, -1);
--webkit-transform: scale(1, -1);
--o-transform: scale(1, -1);
--ms-transform: scale(1, -1);
-transform: scale(1, -1);
-}
+-ms-transform: rotate(270deg); /* IE 9 */
+    -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+    transform: rotate(270deg);
 
 }
+
+#thealmightyzool2 {
+ 
+	
+	width: 460px;
+	margin: auto;
+	padding: 100px;
+	
+
+
+}
+
+#thealmightyzool3 {
+ 
+	
+	width: 460px;
+	margin: auto;
+	padding: 100px;
+	-ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+    transform: rotate(180deg);
+    top:400px;
+
+}
+
+	
+#omnigod{
+
+	width: 460px;
+	margin: auto;
+	padding: 100px
+
+
+
+}
+
+
+
+
+
+
 
 /*
 
